suggestion header spacing corrected

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -487,13 +487,14 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    height: 540px;
+    height: auto;
     margin: 120px 0px 75px 0px;
     .suggestions-header {
       position: relative;
       text-align: center;
       width: 100%;
       height: auto;
+      margin: 0px 0px 50px 0px;
     }
     .suggestions-trio {
       position: relative;
